# mle-challenge

./: .gitignore  Dockerfile  README.md  pyproject.toml  python_post_request.py  setup.cfg  solution.md
.devcontainer/: devcontainer.json
category_prediction/: agent.py  config.py  listing.py  preprocess.py  solution.md
docs/source/: conf.py
public/: .buildinfo  category_prediction.agent.html  category_prediction.config.html  category_prediction.html  category_prediction.listing.html  category_prediction.preprocess.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.dataset_preprocess.config.html  src.dataset_preprocess.html  src.dataset_preprocess.main.html  src.dataset_preprocess.preprocess.html  src.html  src.predictor.html  src.train.config.html  src.train.evaluation.html  src.train.html  src.train.main.html  src.train.train.html
public/.doctrees/: category_prediction.agent.doctree  category_prediction.config.doctree  category_prediction.doctree  category_prediction.listing.doctree  category_prediction.preprocess.doctree  environment.pickle  index.doctree  modules.doctree  src.dataset_preprocess.config.doctree  src.dataset_preprocess.doctree  src.dataset_preprocess.main.doctree  src.dataset_preprocess.preprocess.doctree  src.doctree  src.predictor.doctree  src.train.config.doctree  src.train.doctree  src.train.evaluation.doctree  src.train.main.doctree  src.train.train.doctree
public/_sources/: category_prediction.agent.rst.txt  category_prediction.config.rst.txt  index.rst.txt  (+15 more)
src/: predictor.py
(+14 files in other folders)
