[tool.poetry]
name = "mle-challenge"
version = "1.0.0"
description = ""
authors = [
    "Sample Fernandez <sample.fernandez@sample.com>"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ipykernel = "6.21.*"
matplotlib = "3.7.*"
pandas = "2.0.*"
seaborn = "0.12.*"
scikit-learn = "1.2.*"
click = "8.1.*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pytest = "*"
pytest-cov = "*"
sphinx = "*"
sphinxcontrib-napoleon = "*"
sphinx-rtd-theme = "*"
myst-parser = "^0.18.0"

[tool.isort]
profile = "black"
py_version = 39
line_length = 120

[tool.black]
line-length = 120
target-version = ['py39']
skip-string-normalization = 1
